--- a/adhvagabackend/package.json
+++ b/adhvagabackend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
@@ -8,7 +9,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.3",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "streamifier": "^0.1.1"
   },
   "name": "adhvagabackend",
   "version": "1.0.0",
